javascript/ql/test/query-tests/LanguageFeatures/SyntaxError/destructingPrivate.js
class C {
  bar() {
    {#privDecl} = this;
  }
}